Fix footer on mobile.

--- a/webapp/src/App.scss
+++ b/webapp/src/App.scss
@@ -9,12 +9,12 @@
   padding: 0.7rem 0;
   font-size: 0.8rem;
 
-  a {
-    color: inherit;
-
-    &:hover {
-      color: $link;
-    }
+  // fix columns to wide on mobile (https://github.com/jgthms/bulma/issues/449)
+  @media screen and (max-width: 1024px) {
+      .columns {
+          margin-left: 0;
+          margin-right: 0;
+      }
   }
 
   .item:not(:first-child) {
